--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -63,7 +63,7 @@
      "text": [
       "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
       "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
@@ -74,7 +74,7 @@
       "\n",
       "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
       "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.10     \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.17\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
       "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
       "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
       "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,12 +842,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -873,9 +869,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As our predictor domain-space spans 3 dimensions, we chose to model this 3rd dimension (**Mean of the DM SNR Curve**) using colour - with low **Mean of the DM SNR curve** values coloured in beige, and high values represented by bluer hues. <br>\n",
+    "As our predictor domain-space spans 3 dimensions, we chose to model the third dimension (**Mean of the DM SNR Curve**) using colour - with low values in beige, and high values in steel blue. <br>\n",
+    "\n",
     "To then represent our **intereference** and **pulsar** classes, we opted to change point shape: representing **intereference** points with crosses, and **pulsar** points with standard circles. <br>\n",
-    "Viewing the graph above, there is undoubtedly a relationship between the **pulsar** class, and the three predictors we decided upon from **cross validation**. It seems in general that pulsar stars have a high **Excess Kurtosis of the Integrated Profile**, a high **Mean of the DM SNR Curve**, and a low **Mean of the Integrated Profile**. <br>\n",
+    "\n",
+    "From the graph above, there is undoubtedly a relationship between the **pulsar** class and the three predictors we decided upon from **cross validation**. It seems in general that pulsar stars have a high **Excess Kurtosis of the Integrated Profile**, a high **Mean of the DM SNR Curve**, and a low **Mean of the Integrated Profile**. <br>\n",
+    "\n",
     "With that out of the way, it's time to create our  K-Nearest Neighbours algorithm with the selected training data:"
    ]
   },
@@ -890,7 +889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to offset the class imbalance present between **pulsar** readings and the more common **interference** ones, we apply the *Themis* package to upsample our data - duplicating pulsar observations to raise their power to affect new observations. <br>\n",
+    "In order to offset the class imbalance present between **pulsar** readings and the more common **interference** ones (*see Table 2*), we apply the *Themis* package to upsample our data - duplicating pulsar observations to increase their effect upon classification. <br>\n",
     "\n",
     "However, this will **not** be baked into our cross validation data during hyperparameter selection. If we were to prep and bake oversampled training data and subsequently perform cross validation, we would return the highest-accuracy K value of 1 each time. **Why?** Because of data leakage. As duplicate points of the infrequent class are spread throughout the training set, some will inevitably enter the validation set - allowing our algorithm to test on duplicate points it has already trained on. <br>\n",
     "To prevent this, upsampling will be performed through our recipe directly."
@@ -898,24 +897,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Registered S3 methods overwritten by 'themis':\n",
-      "  method                  from   \n",
-      "  bake.step_downsample    recipes\n",
-      "  bake.step_upsample      recipes\n",
-      "  prep.step_downsample    recipes\n",
-      "  prep.step_upsample      recipes\n",
-      "  tidy.step_downsample    recipes\n",
-      "  tidy.step_upsample      recipes\n",
-      "  tunable.step_downsample recipes\n",
-      "  tunable.step_upsample   recipes\n",
-      "\n"
+     "ename": "ERROR",
+     "evalue": "Error in loadNamespace(name): there is no package called ‘themis’\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in loadNamespace(name): there is no package called ‘themis’\nTraceback:\n",
+      "1. recipe(Class ~ ., data = pulsar_training) %>% step_center(all_predictors()) %>% \n .     step_scale(all_predictors()) %>% themis::step_upsample(Class, \n .     over_ratio = 0.2)",
+      "2. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
+      "3. eval(quote(`_fseq`(`_lhs`)), env, env)",
+      "4. eval(quote(`_fseq`(`_lhs`)), env, env)",
+      "5. `_fseq`(`_lhs`)",
+      "6. freduce(value, `_function_list`)",
+      "7. withVisible(function_list[[k]](value))",
+      "8. function_list[[k]](value)",
+      "9. themis::step_upsample",
+      "10. getExportedValue(pkg, name)",
+      "11. asNamespace(ns)",
+      "12. getNamespace(ns)",
+      "13. loadNamespace(name)",
+      "14. withRestarts(stop(cond), retry_loadNamespace = function() NULL)",
+      "15. withOneRestart(expr, restarts[[1L]])",
+      "16. doWithOneRestart(return(expr), restart)"
      ]
     }
    ],
@@ -955,7 +961,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As this first workflow will be used to determine the optimal value of k, we will consider 5 folds, using even k values from 1 to 50."
+    "As this first workflow will be used to determine the optimal value of k, we will consider 5 folds, using even k values from 2 to 50."
    ]
   },
   {
@@ -989,7 +995,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "ERROR",
@@ -1010,7 +1020,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given this best K-value of 40, we then update our model specifications to match this value - applying upsampling in the process before training"
+    "Given our 40 neighbor algorithm performed the most accurately during **cross-validation**, we update our model specification below for 40 neighbors."
    ]
   },
   {
@@ -1024,7 +1034,7 @@
     "    step_scale(all_predictors()) %>%\n",
     "    themis::step_upsample(Class, over_ratio = 0.5)\n",
     "\n",
-    "pulsar_spec_updated <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 40) %>%\n",
+    "pulsar_spec_updated <- nearest_neighbor(weight_func = \"rectangular\", neighbors = best_k_value) %>%\n",
     "    set_engine(\"kknn\") %>%\n",
     "    set_mode(\"classification\")\n",
     "\n",
