--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Total Word Count: 1316*\n",
+    "*Total Word Count: 1749*\n",
     "\n",
     "Pulsars are a rare type of neutron star that rotates while emitting electromagnetic radiation. When directed at the earth, these  emissions can be picked up by radio telescopes, producing radio waves of recognizable frequencies.\n",
     "Unfortunately, however, these frequencies are difficult to separate from terrestrial radio interference, making it difficult for astronomers to detect veritable pulsars. <br>\n",
@@ -1372,7 +1372,9 @@
     "  * For the interested reader, we direct you towards *PulsarFeatureLab*, the python-based tool used to extract candidate files for use in the HTRU2 dataset\n",
     "  * *PulsarFeatureLab* can be found at https://github.com/scienceguyrob/PulsarFeatureLab\n",
     "2. What other forms of classification (e.g. SVMs, Logistic Regression, etc) could be applied to improve accuracy?\n",
-    "  * KNN classifiers perform slowly with high values of K and large datasets. The analysis done here posesses both problems. By switching to another classification algorithm, we believe a more efficient solution can be found for the pulsar classification question."
+    "  * KNN classifiers perform slowly with high values of K and large datasets. The analysis done here posesses both problems. By switching to another classification algorithm, we believe a more efficient solution can be found to the pulsar classification question.\n",
+    "3. What types of interference are forming our algorithm's false positives (*see Table 8*)?\n",
+    "  * Using k-means clustering, it would be possible to group interference observations into different types that corrospond to the different sources of terrestrial radio waves. By determining the exact type of interference our algorithm struggles with, the necessary information could be provided to astronomers to avoid such sources that obscure pulsar observations"
    ]
   },
   {
